# llm_tts_bot_prj

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  run.bat  run.sh  server.py  stop.bat  stop.sh
src/llm/: base.py  ollama_provider.py
src/tts/: base.py  edge_tts_provider.py  pyttsx3_provider.py
static/: app.js  index.html  style.css
