[project]
name = "llm-tts-bot-prj"
version = "0.1.0"
description = "LLM chatbot with TTS output"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "ollama",
    "edge-tts",
    "pygame",
    "pyttsx3",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
